[package]
name = "helix-auth-lib"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "helix_auth_lib"

[dependencies]
##API MANAGEMENT
actix-web = "3.1.0"
actix-service = "1.0.6"
futures = "0.3.1"

jsonwebtoken = "5.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "0.5", features = ["v5", "serde"]}

