[package]
name = "helix-config-lib"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "helix_config_lib"

[dependencies]
dotenv = "^0.15.0"
serde = "1.0"
serde_derive = "1.0"
