[package]
name = "helix-db-lib"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "helix_db_lib"

[dependencies]
postgres = {version = "^0.15.2", features =["with-chrono", "with-uuid", "with-serde_json"]}