[package]
name = "helix-tracker-lib"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

chrono = { version = "^0.4", features = ["serde"] }
postgres = {version = "^0.15.2", features =["with-chrono", "with-uuid", "with-serde_json"]}
uuid = { version = "0.5", features = ["v5", "serde"]}
thiserror = "1.0.22"

sha-1 = "0.9.2"