[package]
name = "helix-tracker-lib"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v5", "serde"]}
thiserror = "1.0.22"
sha-1 = "0.9.2"

postgres = {version = "^0.15.2", features =["with-chrono", "with-uuid", "with-serde_json"]}
tokio = { version = "0.3.3", features = ["full"] }
tokio-postgres = {version ="0.6.0", features =["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"]}
deadpool-postgres = "0.6.0"

async-trait = "0.1.41"

